--- a/ui/characterList/build.gradle
+++ b/ui/characterList/build.gradle
@@ -53,8 +53,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     implementation project(path: ":ui:base")
+    implementation project(path: ":data")
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
