--- a/ui/home/build.gradle
+++ b/ui/home/build.gradle
@@ -60,4 +60,6 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
