--- a/ui/characterList/build.gradle
+++ b/ui/characterList/build.gradle
@@ -60,4 +60,6 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    implementation "com.github.bumptech.glide:glide:4.12.0"
 }
