--- a/ui/home/build.gradle
+++ b/ui/home/build.gradle
@@ -22,7 +22,7 @@ android {
     buildTypes {
 
         release {
-            
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -53,6 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
@@ -62,4 +63,6 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     implementation 'org.greenrobot:eventbus:3.2.0'
+
+    implementation "com.github.bumptech.glide:glide:4.12.0"
 }
