--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,24 +41,26 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // UI
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
+    // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
-    implementation project(path: ":ui:base")
-    implementation project(path: ":ui:home")
-    implementation project(path: ":ui:characterList")
-    implementation project(path: ":data")
-
     implementation 'org.greenrobot:eventbus:3.2.0'
+
+    // Features
+    implementation project(path: ":ui:base")
+    implementation project(path: ":data")
+    implementation project(path: ":ui:home")
+    implementation project(path: ":ui:character:characterList")
 }
