--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation project(path: ":data")
     implementation project(path: ":ui:home")
     implementation project(path: ":ui:character:characterList")
+    implementation project(path: ":ui:character:characterDetails")
 }
