--- a/ui/character/characterList/build.gradle
+++ b/ui/character/characterList/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
     implementation project(path: ":ui:base")
     implementation project(path: ":data")
 }
