--- a/ui/base/src/main/AndroidManifest.xml
+++ b/ui/base/src/main/AndroidManifest.xml
@@ -2,4 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jayasuryat.base">
 
+    <application android:theme="@style/Theme.RickAndMorty" />
+
 </manifest>
