--- a/ui/episode/episodeList/build.gradle
+++ b/ui/episode/episodeList/build.gradle
@@ -1,9 +1,8 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id "androidx.navigation.safeargs.kotlin"
 }
 
 android {
@@ -11,13 +10,13 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.jayasuryat.rickandmorty"
         minSdk 22
         targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -34,6 +33,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -45,24 +48,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // UI
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
-    // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     implementation 'org.greenrobot:eventbus:3.2.0'
 
-    // Features
     implementation project(path: ":ui:base")
     implementation project(path: ":data")
-    implementation project(path: ":ui:home")
-    implementation project(path: ":ui:character:characterList")
-    implementation project(path: ":ui:character:characterDetails")
-    implementation project(path: ":ui:episode:episodeList")
 }
