--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':ui:character:characterList'
 include ':ui:character:characterDetails'
 
 include ':ui:episode:episodeList'
+include ':ui:episode:episodeDetails'
