--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'org.jetbrains.kotlin.plugin.serialization'
-    id 'dagger.hilt.android.plugin'
+    id "com.android.library"
+    id "kotlin-android"
+    id "kotlin-kapt"
+    id "org.jetbrains.kotlin.plugin.serialization"
+    id "dagger.hilt.android.plugin"
 }
 
 android {
@@ -26,7 +26,7 @@ android {
         release {
 
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
 
@@ -36,17 +36,16 @@ android {
     }
 
     kotlinOptions {
-
-        jvmTarget = '1.8'
-        freeCompilerArgs += ['-Xexplicit-api=strict']
+        jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xexplicit-api=strict"]
     }
 }
 
 dependencies {
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
