--- a/ui/episode/episodeDetails/build.gradle
+++ b/ui/episode/episodeDetails/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id "com.android.library"
+    id "kotlin-android"
+    id "kotlin-kapt"
+    id "dagger.hilt.android.plugin"
 }
 
 android {
@@ -24,7 +24,7 @@ android {
         release {
 
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
 
@@ -38,19 +38,19 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
     }
 }
 
 dependencies {
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "com.google.android.material:material:1.4.0"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
@@ -59,7 +59,7 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
-    implementation 'org.greenrobot:eventbus:3.2.0'
+    implementation "org.greenrobot:eventbus:3.2.0"
 
     implementation project(path: ":ui:base")
     implementation project(path: ":data")
