--- a/settings.gradle
+++ b/settings.gradle
@@ -9,16 +9,17 @@ dependencyResolutionManagement {
 
 rootProject.name = "RickAndMorty"
 
-include ':app'
+include ":app"
 
-include ':data'
+include ":data"
 
-include ':ui:base'
+include ":ui:base"
 
-include ':ui:home'
+include ":ui:home"
 
-include ':ui:character:characterList'
-include ':ui:character:characterDetails'
+include ":ui:character:characterList"
+include ":ui:character:characterDetails"
 
-include ':ui:episode:episodeList'
-include ':ui:episode:episodeDetails'
+include ":ui:episode:episodeList"
+include ":ui:episode:episodeDetails"
+include ":base-data"
