--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RickAndMorty">
+
         <activity
-            android:name=".compose.ComposeActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:label="Activity compose"
+            android:label="Rick and Morty - View"
             android:theme="@style/Theme.RickAndMorty">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +25,15 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+            android:name=".compose.ComposeActivity"
+            android:exported="true"
+            android:label="Rick and Morty - JC"
+            android:theme="@style/Theme.RickAndMorty">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
