--- a/shared-composable/src/main/AndroidManifest.xml
+++ b/shared-composable/src/main/AndroidManifest.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.jayasuryat.sharedcomposable">
-
-</manifest>
+<manifest package="com.jayasuryat.sharedcomposable" />
